--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -20,5 +20,5 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      working-directory: 03-app-dotnet
-      run: docker build . --file Dockerfile --tag my-app-dotnet:$(date +%s)
+      working-directory: actions-todo/to-do
+      run: docker build . --file Dockerfile --tag to-do-actions:$(date +%s)
